# DOCUMENT_EXTRACTION

./: README.md  main.py  pyproject.toml
data/processed/adobe_result/Interim-Report-2024/: markdown_tables.md  structuredData.json
data/processed/adobe_result/Interim-Report-2024/tables/: fileoutpart0.xlsx  fileoutpart10.xlsx  fileoutpart12.xlsx  fileoutpart14.xlsx  fileoutpart2.xlsx  fileoutpart4.xlsx  fileoutpart6.xlsx  fileoutpart8.xlsx
data/processed/docling_result/: Interim-Report-2024.md  Our-Impact-in-2023.md
data/processed/landingai_result/: Interim-Report-2024.md  Our-Impact-in-2023.md
data/processed/mistral_result/: Interim-Report-2024.md  Our-Impact-in-2023.md
function/: adobe.py
notebooks/: document_extraction.ipynb
