[project]
name = "document-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepsearch-toolkit>=1.0.1",
    "docling==2.25.2",
    "google-genai==1.19.0",
    "google-generativeai==0.7.2",
    "ipykernel>=6.30.1",
    "mistral>=20.0.0",
    "mistralai>=1.9.7",
    "openai==1.86.0",
    "openpyxl>=3.1.5",
    "pdfservices-sdk>=4.2.0",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.4.4",
]
